# ros-repo-4

./: .gitignore  README.md  backup.sql  build_and_run.sh  config.yaml  visualization.py
ai_server/: CMakeLists.txt  README.md  UDP_STREAMING_GUIDE.md  package.xml  test_camera_switch.html  (+1 more)
interfaces/robot_interfaces/: CMakeLists.txt  README.md
interfaces/robot_interfaces/msg/: RobotFeedback.msg  RobotStatus.msg
interfaces/robot_interfaces/srv/: ChangeRobotStatus.srv  LoginAdmin.srv
rosQt/: .gitkeep  CMakeLists.txt  control_popup1.cpp  control_popup1.h  control_popup1.ui  control_popup2.cpp  control_popup2.h  control_popup2.ui  dashboard.cpp  dashboard.h  dashboard.ui  layout.cpp  layout.h  layout.ui  log.cpp  log.h  log.ui  login.cpp  login.h  login.ui  main.cpp  map.cpp  map.h  map.ui  readme.md  readme.txt  status.cpp  status.h  status.ui  status2.cpp  status2.h  status2.ui  status3.cpp  status3.h  status3.ui  style.cpp  style.h  udp_image_receiver.cpp  udp_image_receiver.h  userPopover.ui  (+2 more)
rosQt/style/qss/: layout.qss  login.qss  utils.qss
rosQt/style/qss/component/: btn.qss  checkbox.qss  divider.qss  radiobox.qss  scrollbar.qss  select.qss  spinbox.qss  table.qss  textfield.qss
rosQt/style/qss/contents/: cctv.qss  dashboard.qss  detect_log.qss
server/ai_server/: CMakeLists.txt  UDP_STREAMING_GUIDE.md  package.xml
server/ai_server/include/ai_server/: ai_server.h  udp_image_sender.h
server/ai_server/src/: ai_server.cpp  main.cpp  webcam_streamer.cpp
server/central_server/: CMakeLists.txt  package.xml
server/central_server/include/central_server/: admin_request_handler.h  ai_request_handler.h  central_server.h  config.h  database_manager.h  http_server.h  robot_navigation_manager.h  robot_request_handler.h  user_request_handler.h  websocket_server.h
server/central_server/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
server/central_server/install/robot_central_interfaces/include/robot_central_interfaces/robot_central_interfaces/msg/: robot_status.h  robot_status.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
server/central_server/install/robot_central_interfaces/include/robot_central_interfaces/robot_central_interfaces/srv/: get_robot_status.h  get_robot_status.hpp  navigate_robot.h  navigate_robot.hpp
server/central_server/install/robot_central_interfaces/share/robot_central_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
server/central_server/install/robot_central_interfaces/share/robot_central_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_robot_central_interfaces__rosidl_generator_cExport-noconfig.cmake  export_robot_central_interfaces__rosidl_generator_cExport.cmake  export_robot_central_interfaces__rosidl_generator_cppExport.cmake  export_robot_central_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_robot_central_interfaces__rosidl_generator_pyExport.cmake  export_robot_central_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_robot_central_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_robot_central_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_robot_central_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  robot_central_interfacesConfig.cmake  robot_central_interfaces__rosidl_typesupport_cExport-noconfig.cmake  robot_central_interfaces__rosidl_typesupport_cExport.cmake  robot_central_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  robot_central_interfaces__rosidl_typesupport_cppExport.cmake  robot_central_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  robot_central_interfaces__rosidl_typesupport_introspection_cExport.cmake  robot_central_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  robot_central_interfaces__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
server/central_server/install/robot_central_interfaces/share/robot_central_interfaces/msg/: RobotStatus.idl  RobotStatus.json
server/central_server/install/robot_central_interfaces/share/robot_central_interfaces/srv/: GetRobotStatus.idl  GetRobotStatus.json  GetRobotStatus.srv  NavigateRobot.idl  NavigateRobot.json
server/central_server/install/robot_central_server/share/robot_central_server/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
server/central_server/install/robot_central_server/share/robot_central_server/cmake/: robot_central_serverConfig.cmake
server/central_server/log/: latest_build
server/central_server/src/: admin_request_handler.cpp  ai_request_handler.cpp  central_server.cpp  database_manager.cpp  http_server.cpp  main.cpp  robot_navigation_manager.cpp  robot_request_handler.cpp  user_request_handler.cpp  websocket_server.cpp
server/central_server/src/robot_central_interfaces/: CMakeLists.txt  package.xml
server/central_server/src/robot_central_interfaces/msg/: RobotStatus.msg
server/central_server/src/robot_central_interfaces/srv/: NavigateRobot.srv
server/central_server/src/robot_central_server/: CMakeLists.txt
server/central_server/src/robot_central_server/include/robot_central_server/: robot_central_server.hpp
server/central_server/src/robot_central_server/src/: main.cpp  robot_central_server.cpp
slam&nav/vicpinky_navigation/: CMakeLists.txt  package.xml  plugin_description.xml
slam&nav/vicpinky_navigation/behavior_tree/: custom_bt.xml
slam&nav/vicpinky_navigation/params/: nav2_params.yaml
slam&nav/vicpinky_navigation/src/: graph_planner.cpp
(+470 files in other folders)
