cmake_minimum_required(VERSION 3.8)
project(vicpinky_navigation)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclcpp_action REQUIRED)
find_package(rclcpp_lifecycle REQUIRED)
find_package(nav2_msgs REQUIRED)
find_package(nav2_core REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(nav2_costmap_2d REQUIRED)
find_package(pluginlib REQUIRED)
find_package(sensor_msgs REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

set(library_name graph_planner)

add_library(${library_name} SHARED 
  src/graph_planner.cpp
)

ament_target_dependencies(${library_name}
  rclcpp
  rclcpp_action
  rclcpp_lifecycle
  nav2_util
  nav2_msgs
  nav_msgs
  geometry_msgs
  tf2_ros
  nav2_costmap_2d
  nav2_core
  pluginlib
  sensor_msgs
)

pluginlib_export_plugin_description_file(nav2_core plugin_description.xml)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

find_package(slam_toolbox REQUIRED)

install(TARGETS ${library_name}
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION lib/${PROJECT_NAME}
)

install(
  DIRECTORY launch map params rviz
  DESTINATION share/${PROJECT_NAME}
)

install(FILES plugin_description.xml
  DESTINATION share/${PROJECT_NAME}
)

ament_export_libraries(
  ${library_name}
)

ament_export_dependencies(
  rclcpp
  rclcpp_action
  rclcpp_lifecycle
  nav2_util
  nav2_msgs
  nav_msgs
  geometry_msgs
  tf2_ros
  nav2_costmap_2d
  nav2_core
  pluginlib
  sensor_msgs
)

ament_package()
